[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scene/Player/script/running.gd" type="Script" id=1]
[ext_resource path="res://Scene/Player/script/Player.gd" type="Script" id=2]
[ext_resource path="res://Scene/Player/script/Statemachine.gd" type="Script" id=3]
[ext_resource path="res://Scene/Player/script/Hurt.gd" type="Script" id=4]
[ext_resource path="res://Scene/Player/script/Parry.gd" type="Script" id=5]
[ext_resource path="res://Scene/Player/script/Attack.gd" type="Script" id=6]
[ext_resource path="res://Scene/player/script/Jump.gd" type="Script" id=7]
[ext_resource path="res://Scene/Player/script/Idle.gd" type="Script" id=8]
[ext_resource path="res://Scene/System/Hitbox.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Shader/SmoothPixel.shader" type="Shader" id=10]
[ext_resource path="res://Scene/player/script/ChargeSkill.gd" type="Script" id=11]
[ext_resource path="res://Asset/Sounds/step1.wav" type="AudioStream" id=12]
[ext_resource path="res://Scene/Player/script/Animator.gd" type="Script" id=13]
[ext_resource path="res://Asset/Animation/Run/Run_animation.png" type="Texture" id=14]
[ext_resource path="res://Scene/Player/anim_sheets/attack_melee/Character3_pa_attack_melee.png" type="Texture" id=15]
[ext_resource path="res://Scene/Player/anim_sheets/hurt/Character3_pa_hurt.png" type="Texture" id=16]
[ext_resource path="res://Asset/Animation/Idle/Original_pa_idle.png" type="Texture" id=17]
[ext_resource path="res://Asset/Animation/Jump/Original_pa_jump.png" type="Texture" id=18]
[ext_resource path="res://Asset/Animation/Fall/Original_pa_fall.png" type="Texture" id=19]
[ext_resource path="res://Scene/Player/anim_sheets/land/Character3_pa_land.png" type="Texture" id=20]
[ext_resource path="res://Scene/Player/anim_sheets/skill_charge/Character3_pa_skill_charge.png" type="Texture" id=21]
[ext_resource path="res://Scene/Player/anim_sheets/skill_use/Character3_pa_skill_use.png" type="Texture" id=22]
[ext_resource path="res://Asset/Animation/Attack/Axe_attack_animation.png" type="Texture" id=23]
[ext_resource path="res://Asset/Animation/Parry/Parry.png" type="Texture" id=24]
[ext_resource path="res://Asset/Sounds/jump1.wav" type="AudioStream" id=25]
[ext_resource path="res://Asset/Sounds/hurt1.wav" type="AudioStream" id=26]
[ext_resource path="res://Asset/Sounds/parry1.wav" type="AudioStream" id=27]
[ext_resource path="res://Asset/Sounds/hit1.wav" type="AudioStream" id=28]

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 10 )

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 2.148, 1 )

[sub_resource type="CapsuleShape2D" id=19]
radius = 12.25
height = 33.6777

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hitboxs/Hitbox:is_able")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/run:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimGroup/melee:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimGroup/hurt:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimGroup/idle:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimGroup/jump:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimGroup/skill_charge:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimGroup/skill_use:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimGroup/attack_axe:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimGroup/parry:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AnimGroup/parry:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AnimGroup/land:frame")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AnimGroup/fall:frame")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_axe"
length = 0.45
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/attack_axe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/attack_axe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=21]
resource_name = "fall"
length = 0.42
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/fall:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/fall:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hurt"
length = 0.14
step = 0.016
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/hurt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.064, 0.128 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/hurt:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.016, 0.032, 0.048, 0.064, 0.08, 0.096, 0.112 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimGroup/hurt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Statemachine/Hurt")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.016 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_hurt_sound"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump"
length = 0.06
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/jump:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/jump:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Statemachine/Jump")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_jump_sound"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "land"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/land:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/land:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=10]
resource_name = "melee"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Hitboxs/Hitbox:is_able")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/melee:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimGroup/melee:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=20]
resource_name = "parry"
length = 0.62
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/parry:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/parry:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46, 0.48, 0.5, 0.52, 0.54, 0.56, 0.58, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 6, 6, 6, 6, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=11]
resource_name = "run"
length = 0.65
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/run:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/run:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Statemachine/Run")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.09, 0.39 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_walk_sound"
}, {
"args": [  ],
"method": "play_walk_sound"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "skill_charge"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/skill_charge:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/skill_charge:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}

[sub_resource type="Animation" id=13]
resource_name = "skill_use"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("AnimGroup/skill_use:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimGroup/skill_use:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12, 0.14, 0.16, 0.18, 0.2, 0.22, 0.24, 0.26, 0.28, 0.3, 0.32, 0.34, 0.36, 0.38, 0.4, 0.42, 0.44, 0.46 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )

[node name="Statemachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Run" type="Node2D" parent="Statemachine"]
script = ExtResource( 1 )
speed = 300

[node name="WalkSound" type="AudioStreamPlayer2D" parent="Statemachine/Run"]
stream = ExtResource( 12 )
volume_db = -25.0

[node name="Attack" type="Node2D" parent="Statemachine"]
script = ExtResource( 6 )

[node name="Hurt" type="Node2D" parent="Statemachine"]
script = ExtResource( 4 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="Statemachine/Hurt"]
stream = ExtResource( 26 )
volume_db = -5.0

[node name="Idle" type="Node2D" parent="Statemachine"]
script = ExtResource( 8 )

[node name="Jump" type="Node2D" parent="Statemachine"]
script = ExtResource( 7 )
jump_height = 200.0
horizental_speed = 300

[node name="LandDetector" type="RayCast2D" parent="Statemachine/Jump"]
position = Vector2( 0, 29 )
enabled = true
cast_to = Vector2( 0, 25 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="Statemachine/Jump"]
stream = ExtResource( 25 )
volume_db = -15.0

[node name="ChargeSkill" type="Node2D" parent="Statemachine"]
script = ExtResource( 11 )

[node name="Parry" type="Node2D" parent="Statemachine"]
script = ExtResource( 5 )

[node name="ParrySound" type="AudioStreamPlayer2D" parent="Statemachine/Parry"]
stream = ExtResource( 27 )

[node name="AnimGroup" type="Node2D" parent="."]
position = Vector2( -1.375, 2.5 )

[node name="run" type="Sprite" parent="AnimGroup"]
visible = false
material = SubResource( 14 )
texture = ExtResource( 14 )
hframes = 5
vframes = 5

[node name="melee" type="Sprite" parent="AnimGroup"]
material = SubResource( 15 )
texture = ExtResource( 15 )
hframes = 5
vframes = 4

[node name="attack_axe" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 23 )
hframes = 4
vframes = 3

[node name="hurt" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 16 )
hframes = 5
vframes = 2

[node name="idle" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 17 )
hframes = 5
vframes = 5

[node name="jump" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 18 )
hframes = 5
vframes = 2

[node name="fall" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 19 )
hframes = 5
vframes = 2
frame = 1

[node name="land" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 20 )
hframes = 5
vframes = 3
frame = 1

[node name="skill_charge" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 21 )
hframes = 5
vframes = 2

[node name="skill_use" type="Sprite" parent="AnimGroup"]
visible = false
texture = ExtResource( 22 )
hframes = 5
vframes = 5

[node name="parry" type="Sprite" parent="AnimGroup"]
texture = ExtResource( 24 )
hframes = 5
vframes = 5

[node name="Hitboxs" type="Node2D" parent="."]

[node name="Hitbox" parent="Hitboxs" instance=ExtResource( 9 )]
animation_name = "melee"
is_able = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitboxs/Hitbox"]
position = Vector2( 8.55994, 6 )
scale = Vector2( 0.700512, 1 )
polygon = PoolVector2Array( 5, -16, 5.45428, -9, 29.0895, -9, 28.75, -16.023 )

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Hitboxs/Hitbox"]
stream = ExtResource( 28 )

[node name="Detection" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Detection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection/Area2D"]
position = Vector2( -0.0465009, 33.2122 )
shape = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 19 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/attack_axe = SubResource( 4 )
anims/fall = SubResource( 21 )
anims/hurt = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/jump = SubResource( 8 )
anims/land = SubResource( 22 )
anims/melee = SubResource( 10 )
anims/parry = SubResource( 20 )
anims/run = SubResource( 11 )
anims/skill_charge = SubResource( 12 )
anims/skill_use = SubResource( 13 )
script = ExtResource( 13 )

[connection signal="body_entered" from="Hitboxs/Hitbox" to="Hitboxs/Hitbox" method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitboxs/Hitbox" to="Hitboxs/Hitbox" method="_on_Hitbox_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="Statemachine/Attack" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Statemachine/Hurt" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Statemachine/Jump" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Statemachine/ChargeSkill" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Statemachine/Parry" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="Hitboxs/Hitbox" method="_on_AnimationPlayer_animation_finished"]
